added words api

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
           <img id="forca" src="img/forca0.svg" alt="inicio-jogo">
         </div>
         <div class="palavra_forca">
-          
-          <label id="palavra" class="palavra">
-            <label>_ _ _ _ _ _</label>
-          </label>
+          <div class="palavra"><label id="palavra"></label></div>
+          <div class="tracejado"><label id="tracejado"></label></div>
         </div>
-        <div class="input"> 
+        <div class="input">
           <input id="input_text" type="text" class="input_text">
           <button class="btn" onclick="jogar()">Jogar</button>
         </div>
